--- a/App.Web/Views/BepSubmission/IndexCount.cshtml
+++ b/App.Web/Views/BepSubmission/IndexCount.cshtml
@@ -155,7 +155,7 @@
 
         <div id="gridTableDiv">
 
-            <table id="gridTable" class="table table-borderless table-striped header-table table-alt">
+            <table id="gridTable" class="table table-borderless table-striped header-table table-alt fixed_headers">
                 <thead class="thead-yellow">
                     <tr>
                         <th rowspan="2">Program</th>
@@ -190,7 +190,7 @@
         </div>
         <div id="gridTableDivR">
 
-            <table id="gridTableR" class="table table-borderless table-striped header-table table-alt">
+            <table id="gridTableR" class="table table-borderless table-striped header-table table-alt fixed_headers">
                 <thead class="thead-yellow">
                     <tr>
                         <th rowspan="2">Program</th>
