--- a/App.Web/Views/BepSubmission/IndexItem.cshtml
+++ b/App.Web/Views/BepSubmission/IndexItem.cshtml
@@ -153,7 +153,7 @@
             </div>
         </div>
         <div id="gridTableDiv">
-                 <table id="gridTable" class="table table-borderless table-striped header-table table-alt">
+                 <table id="gridTable" class="table table-borderless table-striped header-table table-alt fixed_headers">
                     <thead class="thead-yellow">
                         <tr>
                             <th rowspan="2">Material</th>
@@ -184,7 +184,7 @@
                 </table>
 </div>
         <div id="gridTableDivR">
-                   <table id="gridTableR" class="table table-borderless table-striped header-table table-alt">
+                   <table id="gridTableR" class="table table-borderless table-striped header-table table-alt fixed_headers">
                     <thead class="thead-yellow">
                         <tr>
                             <th rowspan="2">
