--- a/App.Web/Views/DetailSubmission/Index.cshtml
+++ b/App.Web/Views/DetailSubmission/Index.cshtml
@@ -246,7 +246,7 @@
                 @Ajax.ActionLink("নতুন তথ্য প্রদান", "Create", "DetailSubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-bracify-add" })
             }
         </div>
-        <table id="gridTable" class="table table-borderless table-striped header-table table-alt add-new-btn">
+        <table id="gridTable" class="table table-borderless table-striped header-table table-alt add-new-btn fixed_headers">
             <thead class="thead-yellow">
 
                 <tr>
