--- a/App.Web/Views/DetailSubmission/IndexApp.cshtml
+++ b/App.Web/Views/DetailSubmission/IndexApp.cshtml
@@ -224,7 +224,7 @@
             </div>
         </div>
 
-        <table id="gridTable" class="table table-borderless table-striped header-table table-alt">
+        <table id="gridTable" class="table table-borderless table-striped header-table table-alt fixed_headers">
             <thead class="thead-yellow">
                 <tr>
 
