--- a/App.Web/Views/DistrictSubmission/Index.cshtml
+++ b/App.Web/Views/DistrictSubmission/Index.cshtml
@@ -169,16 +169,16 @@
                 </div>
             </div>
             @*<div class="dataTables_length" id="gridTable_length">
-                <label>
-                    Records per page
-                    <select name="gridTable_length" aria-controls="gridTable" class="custom-select custom-select-sm form-control form-control-sm">
-                        <option value="10">10</option>
-                        <option value="25">25</option>
-                        <option value="50">50</option>
-                        <option value="100">100</option>
-                    </select>
-                </label>
-            </div>*@
+                    <label>
+                        Records per page
+                        <select name="gridTable_length" aria-controls="gridTable" class="custom-select custom-select-sm form-control form-control-sm">
+                            <option value="10">10</option>
+                            <option value="25">25</option>
+                            <option value="50">50</option>
+                            <option value="100">100</option>
+                        </select>
+                    </label>
+                </div>*@
             <div class="dataTables_info" id="data_table_info" role="status" aria-live="polite">
                 Total Records
                 <strong id="iTotalRecords" class="text-bracify">
@@ -191,12 +191,12 @@
                 <div class="filter-item">
                     <label for="info_source">বিভাগ</label>
                     @*<select class="searchable-dropdown form-control select2-hidden-accessible" id="info_source" data-select2-id="info_source" tabindex="-1" aria-hidden="true">
-                        <option data-select2-id="2">Communicable diseases</option>
-                        <option>Communicable diseases</option>
-                        <option>Communicable diseases</option>
-                        <option>Communicable diseases</option>
-                        <option>Communicable diseases</option>
-                    </select>*@
+                            <option data-select2-id="2">Communicable diseases</option>
+                            <option>Communicable diseases</option>
+                            <option>Communicable diseases</option>
+                            <option>Communicable diseases</option>
+                            <option>Communicable diseases</option>
+                        </select>*@
                     @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Divisions", new { @class = "searchable-dropdown form-control" })
 
                 </div>
@@ -209,9 +209,9 @@
                 </div>
 
                 @*<div class="filter-item">
-                    <label for="districts">উপজেলা</label>
-                    @Html.DropDownListFor(model => model.ContentTypeId3, Model.ContentTypes3, "All Upazillas", new { @class = "searchable-dropdown form-control" })
-                </div>*@
+                        <label for="districts">উপজেলা</label>
+                        @Html.DropDownListFor(model => model.ContentTypeId3, Model.ContentTypes3, "All Upazillas", new { @class = "searchable-dropdown form-control" })
+                    </div>*@
                 <div class="filter-item">
                     <label for="start_date">সার্চের শুরুর তারিখ</label>
                     <div class="input-group datepicker flatpickr">
@@ -252,24 +252,24 @@
             }
         </div>
 
-        <table id="gridTable" class="table table-borderless table-striped header-table table-alt">
+        <table id="gridTable" class="table table-borderless table-striped header-table table-alt fixed_headers">
             <thead class="thead-yellow">
                 <tr>
                     <th>
                         ⇒বিভাগ<br />⇒জেলা<br />⇒তারিখ<br />⇒সদস্য
                     </th>
                     @*<th>
-                        কোয়ারেন্টাইন
-                    </th>
-                    <th>
-                        রিলিজ
-                    </th>
-                    <th>
-                        টেস্ট
-                    </th>
-                    <th>
-                        মৃত্যু
-                    </th>*@
+                            কোয়ারেন্টাইন
+                        </th>
+                        <th>
+                            রিলিজ
+                        </th>
+                        <th>
+                            টেস্ট
+                        </th>
+                        <th>
+                            মৃত্যু
+                        </th>*@
                     <th>
                         স্থানীয় প্রশাসন কী ব্যবস্থা গ্রহণ করেছে?
                     </th>
@@ -304,18 +304,18 @@
                         অতিরিক্ত প্রশ্ন 2
                     </th>
                     @*@if (UserRole.Check("DISTRICT", SessionHelper.Role))
-                    {
-                        <th></th>
-                    }*@
+                        {
+                            <th></th>
+                        }*@
                 </tr>
             </thead>
         </table>
     </div>
-    </div>
+</div>
 
 
-        @section scripts{
-            <script type="text/javascript">
+@section scripts{
+    <script type="text/javascript">
     $(document).ready(function () {
 
         $("#prn").click(function () {
@@ -392,5 +392,5 @@
         $("#tebular").addClass("active");
         $("#bdc_info").css("display", "block");
         });
-            </script>
-        }
+    </script>
+}
