--- a/App.Web/Views/DistrictSubmission/IndexSum.cshtml
+++ b/App.Web/Views/DistrictSubmission/IndexSum.cshtml
@@ -198,7 +198,7 @@
 
 
 
-        <table id="gridTable" class="table table-borderless table-striped header-table table-alt">
+        <table id="gridTable" class="table table-borderless table-striped header-table table-alt fixed_headers">
             <thead class="thead-yellow">
                 <tr>
                     <th colspan="2">এলাকা</th>
