--- a/App.Web/Views/HnppSubmission/Index.cshtml
+++ b/App.Web/Views/HnppSubmission/Index.cshtml
@@ -122,19 +122,21 @@
                 @Ajax.ActionLink("নতুন তথ্য প্রদান", "Create", "HnppSubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-bracify-add" })
             }
         </div>
-        <table id="gridTable" class="table table-borderless table-striped header-table table-alt">
+        <table id="gridTable" class="table table-borderless table-striped header-table table-alt fixed_headers">
+
             <thead class="thead-yellow" style="border:solid">
-                <tr >
+
+                <tr>
                     <th rowspan="2">
                         জেলা
                     </th>
                     <th rowspan="2">
                         উপজেলা
                     </th>
-                    <th rowspan="2"  >
+                    <th rowspan="2">
                         তারিখ
                     </th>
-                    <th colspan="5" style="text-align:center;  " >
+                    <th colspan="5" style="text-align:center;  ">
                         সচেতনতা কাউন্সেলিং
                     </th>
                     <th rowspan="2">
@@ -189,7 +191,9 @@
                         অংশহগ্রহণকারী
                     </th>
                 </tr>
+
             </thead>
+
         </table>
 
 
