--- a/App.Web/Views/BepSubmission/Index.cshtml
+++ b/App.Web/Views/BepSubmission/Index.cshtml
@@ -128,7 +128,7 @@
                 @Ajax.ActionLink("নতুন তথ্য প্রদান", "Create", "BepSubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-bracify-add" })
             }
         </div>
-        <table id="gridTable" class="table table-borderless table-striped header-table table-alt">
+        <table id="gridTable" class="table table-borderless table-striped header-table table-alt fixed_headers">
             <thead class="thead-yellow">
                 <tr>
                     <th>
