--- a/App.Web/Views/DistrictSubmission/IndexReleif.cshtml
+++ b/App.Web/Views/DistrictSubmission/IndexReleif.cshtml
@@ -252,7 +252,7 @@
                 @Ajax.ActionLink("তথ্য প্রদান ও পরিবর্তন", "Create", "DistrictSubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-bracify-add" })
             }
         </div>
-        <table id="gridTable" class="table table-borderless table-striped header-table table-alt">
+        <table id="gridTable" class="table table-borderless table-striped header-table table-alt fixed_headers">
             <thead class="thead-yellow">
                 <tr>
                     <th colspan="3">এরিয়া </th>
