--- a/App.Web/Views/Standing/DistQuestion.cshtml
+++ b/App.Web/Views/Standing/DistQuestion.cshtml
@@ -37,7 +37,7 @@
         <div class="custom-add">
             @Ajax.ActionLink("Add Question", "CreateQuestion", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-bracify-add" })
         </div>
-        <table id="gridTable" class="table table-borderless table-striped header-table table-alt">
+        <table id="gridTable" class="table table-borderless table-striped header-table table-alt fixed_headers">
             <thead class="thead-yellow">
                 <tr>
                     <th>
