--- a/App.Web/Content/css/brac/bootstrap-legacy.css
+++ b/App.Web/Content/css/brac/bootstrap-legacy.css
@@ -23,19 +23,19 @@
 
 .modal {
     position: fixed;
-    top: 5%;
+    top: 60%;
     left: 50%;
     z-index: 1050;
-    width: 800px;
-    margin-left: -400px;
+    overflow: auto;
+    width: 1000px;
+    margin: -280px 0 0 -500px;
     background-color: #ffffff;
     border: 1px solid #999;
     border: 1px solid rgba(0, 0, 0, 0.3);
-    *border: 1px solid #999;
+    border: 1px solid #999;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
-    outline: none;
     -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
     box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
@@ -124,4 +124,14 @@
     }
 .modal-body .table-striped tbody tr:nth-child(odd) td, .table-striped tbody tr:nth-child(odd) th {
     background-color: #f9f9f9;
+}
+@media (max-width: 480px) {
+    .modal {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        left: 10px;
+        width: auto;
+        margin: 0;
+    }
 }
